[ENH] Add example of wiki-plugin style views in use

--- a/profiles/02_content.yml
+++ b/profiles/02_content.yml
@@ -4,7 +4,7 @@ objects:
     type: wiki_page
     ref: page_about 
     data:
-      mode: create
-      name: About Tiki Addons 
+      mode: create_or_update
+      name: About Tiki Addons
       content: wikicontent:page_about
       description:
